--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <div class="member_box">
                                     <!-- 팝플 가입일 경우 .member_box_img 에 .ty_pp_member 클래스 추가 -->
                                     <div class="member_box_img img_box ty_pp_member">
-                                        <img src="./images/nav_all/thumb.jpg" alt="">
+                                        <img src="./images/nav_all/thumb.jpg" alt="" style="object-fit: contain;">
                                     </div>
                                     <div class="member_box_info">
                                         <div class="member_box_name">
@@ -1602,55 +1602,62 @@
                                                 </g>
                                             </g>
                                         </g>
+                                        <!-- 스토리콘 작품 리스트 -->
+                                        <foreignObject class="main_story_list_wrap"  xmlns="http://www.w3.org/1999/xhtml">
+                                            <ul class="main_story_list">
+                                                <li class="main_story_list_item">
+                                                    <a href="" class="main_story_list_link">
+                                                        <div class="sc_thumb ty_sq">
+                                                            <span class="sc_tag up"><span>UP</span></span>
+                                                            <div class="sc_thumb_img">
+                                                                <img src="https://picsum.photos/600" alt="">
+                                                            </div>
+                                                        </div>
+                                                        <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
+                                                        <div class="writer_set">
+                                                            <div class="writer_set_thumb">
+                                                                <img src="https://picsum.photos/600" alt="">
+                                                            </div>
+                                                            <div class="writer_set_txt">
+                                                                <div class="writer_set_info">
+                                                                    <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                                <li class="main_story_list_item">
+                                                    <a href="" class="main_story_list_link">
+                                                        <div class="sc_thumb ty_sq">
+                                                            <div class="sc_thumb_img">
+                                                                <img src="https://picsum.photos/600" alt="">
+                                                            </div>
+                                                        </div>
+                                                        <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
+                                                        <div class="writer_set">
+                                                            <div class="writer_set_thumb">
+                                                                <img src="https://picsum.photos/600" alt="">
+                                                            </div>
+                                                            <div class="writer_set_txt">
+                                                                <div class="writer_set_info">
+                                                                    <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </foreignObject >
+                                        <!-- // 스토리콘 작품 리스트 -->
+
+                                        <!-- 링크 : 스토리콘 웹툰 메인 -->
+                                        <foreignObject class="link01_wrap" xmlns="http://www.w3.org/1999/xhtml">
+                                            <a href="" class="link01">
+                                                <lottie-player src="./images/main/painting.json" class="lottie_player" background="transparent" speed="1" loop autoplay ></lottie-player>
+                                            </a>
+                                        </foreignObject>
+                                        <!-- // 링크 : 스토리콘 웹툰 메인 -->
                                     </svg>
-                                    <!-- 링크 : 스토리콘 웹툰 메인 -->
-                                    <a href="" class="link01">
-                                        <lottie-player src="./images/main/painting.json" class="lottie_player" background="transparent" speed="1" loop autoplay ></lottie-player>
-                                    </a>
-                                    <!--// 링크 : 스토리콘 웹툰 메인 -->
-                                    <ul class="main_story_list">
-                                        <li class="main_story_list_item">
-                                            <a href="" class="main_story_list_link">
-                                                <div class="sc_thumb ty_sq">
-                                                    <span class="sc_tag up"><span>UP</span></span>
-                                                    <div class="sc_thumb_img">
-                                                        <img src="https://picsum.photos/600" alt="">
-                                                    </div>
-                                                </div>
-                                                <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
-                                                <div class="writer_set">
-                                                    <div class="writer_set_thumb">
-                                                        <img src="https://picsum.photos/600" alt="">
-                                                    </div>
-                                                    <div class="writer_set_txt">
-                                                        <div class="writer_set_info">
-                                                            <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="main_story_list_item">
-                                            <a href="" class="main_story_list_link">
-                                                <div class="sc_thumb ty_sq">
-                                                    <div class="sc_thumb_img">
-                                                        <img src="https://picsum.photos/600" alt="">
-                                                    </div>
-                                                </div>
-                                                <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
-                                                <div class="writer_set">
-                                                    <div class="writer_set_thumb">
-                                                        <img src="https://picsum.photos/600" alt="">
-                                                    </div>
-                                                    <div class="writer_set_txt">
-                                                        <div class="writer_set_info">
-                                                            <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
