--- a/index.html
+++ b/index.html
@@ -1180,7 +1180,7 @@
 
                                             </g>
                                             <!-- 스토리콘 작품 리스트 -->
-                                            <foreignObject class="main_story_list_wrap"  xmlns="http://www.w3.org/1999/xhtml">
+                                            <foreignObject width="320px" height="300px" class="main_story_list_wrap"  xmlns="http://www.w3.org/1999/xhtml">
                                                 <ul class="main_story_list">
                                                     <li class="main_story_list_item">
                                                         <a href="" class="main_story_list_link">
@@ -1228,7 +1228,7 @@
                                             <!-- // 스토리콘 작품 리스트 -->
 
                                             <!-- 링크 : 스토리콘 웹툰 메인 -->
-                                            <foreignObject class="link01_wrap" xmlns="http://www.w3.org/1999/xhtml">
+                                            <foreignObject width="400px" height="340px" class="link01_wrap" xmlns="http://www.w3.org/1999/xhtml">
                                                 <a href="" class="link01">
                                                     <lottie-player src="./images/main/painting.json" class="lottie_player" background="transparent" speed="1.4" loop autoplay ></lottie-player>
                                                 </a>
@@ -1794,7 +1794,7 @@
                                                         <path data-name="선 284" transform="translate(12.514 126.435)" style="stroke-width:3px;stroke-linejoin:round;stroke-linecap:round;stroke:#000;fill:none" d="M0 0h42.178"/>
                                                     </g>
                                                 </g>
-                                                <foreignObject class="lottie_box" xmlns="http://www.w3.org/1999/xhtml">
+                                                <foreignObject width="376px" height="391px" class="lottie_box" xmlns="http://www.w3.org/1999/xhtml">
                                                     <lottie-player src="./images/main/tbl.json" class="lottie_player" background="transparent" speed="1.5" loop autoplay ></lottie-player>
                                                 </foreignObject>
 
@@ -3243,7 +3243,7 @@
                                                 </g>
 
                                             </g>
-                                            <foreignObject class="lottie_box" xmlns="http://www.w3.org/1999/xhtml">
+                                            <foreignObject width="370px" height="391px" class="lottie_box" xmlns="http://www.w3.org/1999/xhtml">
                                                 <lottie-player src="./images/main/book.json" class="lottie_player" background="transparent" speed="1" loop autoplay ></lottie-player>
                                             </foreignObject>
                                         </svg>
@@ -3702,10 +3702,10 @@
                                                         </g>
                                                     </g>
                                                 </g>
-                                                <foreignObject class="lottie_box lottie_box1" xmlns="http://www.w3.org/1999/xhtml">
+                                                <foreignObject width="360px" height="360px" class="lottie_box lottie_box1" xmlns="http://www.w3.org/1999/xhtml">
                                                     <lottie-player src="./images/main/picture.json" class="lottie_player" background="transparent" speed="1" loop autoplay ></lottie-player>
                                                 </foreignObject>
-                                                <foreignObject class="lottie_box lottie_box2" xmlns="http://www.w3.org/1999/xhtml">
+                                                <foreignObject width="360px" height="360px" class="lottie_box lottie_box2" xmlns="http://www.w3.org/1999/xhtml">
                                                     <lottie-player src="./images/main/run.json" class="lottie_player" background="transparent" speed="1" loop autoplay ></lottie-player>
                                                 </foreignObject>
                                                 <g data-name="그룹 3286" style="clip-path:url(#h5pyt7hrxG)" transform="translate(52 299)">
