--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
                 <div class="main_wrap">
                     <div class="con_list_wrap">
                         <div class="con_list">
-                            <div class="swiper-wrapper">
+                            <div class="swiper-wrapper con_list_wrapper">
                                 <div class="swiper-slide con_list_item con_list_item1">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
-                                            <svg xmlns="http://www.w3.org/2000/svg" id="" viewBox="0 0 1160 720"  class="svg_cont">
-                                                <image href="./images/main/main_con1.svg" width="1160" height="720"/>
+                                            <svg xmlns="http://www.w3.org/2000/svg" id="" viewBox="0 0 1160 720"  class="svg_cont pc_only">
+                                                <image href="./images/main/main_con1.svg" width="1160" height="720" class="" />
                                                 <!-- 스토리콘 작품 리스트 -->
                                                 <foreignObject x="431px" y="119px" width="320px" height="300px" class="main_story_list_wrap"  xmlns="http://www.w3.org/1999/xhtml">
                                                     <ul class="main_story_list">
@@ -245,16 +245,73 @@
                                                 </foreignObject >
                                                 <!-- // -->
                                             </svg>
+
+
+
+                                            <svg xmlns="http://www.w3.org/2000/svg" id="" viewBox="0 0 360 660"  class="svg_cont m_only">
+                                                <image href="./images/main/main_con1_m.svg" width="360" height="660" class="" />
+                                                <!-- 스토리콘 작품 리스트 -->
+                                                <foreignObject x="54px" y="232px" width="250px" height="160px" class="main_story_list_wrap"  xmlns="http://www.w3.org/1999/xhtml">
+                                                    <ul class="main_story_list">
+                                                        <li class="main_story_list_item">
+                                                            <a href="" class="main_story_list_link">
+                                                                <div class="sc_thumb ty_sq">
+                                                                    <div class="sc_thumb_img">
+                                                                        <img src="https://picsum.photos/600" alt="">
+                                                                    </div>
+                                                                </div>
+                                                                <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
+                                                                <div class="writer_set">
+                                                                    <div class="writer_set_thumb">
+                                                                        <img src="https://picsum.photos/600" alt="">
+                                                                    </div>
+                                                                    <div class="writer_set_txt">
+                                                                        <div class="writer_set_info">
+                                                                            <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </li>
+                                                        <li class="main_story_list_item">
+                                                            <a href="" class="main_story_list_link">
+                                                                <div class="sc_thumb ty_sq">
+                                                                    <div class="sc_thumb_img">
+                                                                        <img src="https://picsum.photos/600" alt="">
+                                                                    </div>
+                                                                </div>
+                                                                <strong class="tit ellipsis1">제목 입니 제목 입니다 제목 입니다 제목 입니다</strong>
+                                                                <div class="writer_set">
+                                                                    <div class="writer_set_thumb">
+                                                                        <img src="https://picsum.photos/600" alt="">
+                                                                    </div>
+                                                                    <div class="writer_set_txt">
+                                                                        <div class="writer_set_info">
+                                                                            <span class="name">오로치마루 오로치마루오로치마루오로치마루 기자</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </foreignObject >
+                                                <!-- // -->
+                                            </svg>
+
                                             <a href="" class="lottie_box">
                                                 <lottie-player src="./images/main/painting.json" class="lottie_player" background="transparent" speed="3" loop autoplay ></lottie-player>
                                             </a>
+
+
+
+
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide con_list_item con_list_item2">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
-                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720"   class="svg_cont">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720"   class="svg_cont" style="display: none">
                                                 <defs>
                                                     <clipPath id="2y1cwgxuya">
                                                         <path data-name="패스 5602" d="M0 0h1160v720H0z" style="fill:#fae7e0"/>
@@ -831,6 +888,33 @@
                                                     </a>
                                                 </foreignObject>
                                             </svg>
+                                            <img src="./images/main/main_con2_img1.svg" alt="" class="con_img con_img1">
+                                            <img src="./images/main/main_con2_img3.svg" alt="" class="con_img con_img2">
+
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 276.93 332.53" class="svg_cont4" >
+                                                <image href="./images/main/main_con2_img2.svg" width="276.93" height="332.53"/>
+                                                <foreignObject width="200px" height="400px"  xmlns="http://www.w3.org/1999/xhtml" class="main_id_card">
+                                                    <a href="">
+                                                        <div class="reporter_card taC">
+                                                            <div class="reporter_card_logo">
+                                                                <img src="./images/reporter/logo_reporter.svg" alt="어린이과학동아&amp;어린이수학동아 기자단">
+                                                            </div>
+                                                            <div class="reporter_card_thumb_area">
+                                                                <div class="reporter_card_thumb">
+                                                                    <div class="img_box">
+                                                                        <img src="./images/reporter/thumb.jpg" alt="">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="reporter_card_id">
+                                                                <strong class="name ff_godoB">장원영</strong>
+                                                                <span class="logo"><img src="./images/reporter/logo_ds.svg" alt=""></span>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </foreignObject>
+                                            </svg>
+
                                             <div class="lottie_box">
                                                 <lottie-player src="./images/main/tbl.json" class="lottie_player" background="transparent" speed="3" loop autoplay ></lottie-player>
                                                 <!-- [DEV] 기사콘\기사\메인 으로 링크 -->
@@ -1384,9 +1468,13 @@
                                             <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720"  class="svg_cont">
                                                 <image href="./images/main/main_con4.svg" width="1160" height="720"/>
                                             </svg> -->
-                                            <img src="./images/main/main_con4.svg" alt="" class="svg_cont">
+                                            <img src="./images/main/main_con4.svg" alt="" class="svg_cont pc_only">
+                                            <img src="./images/main/main_con4_m.svg" alt="" class="svg_cont m_only">
                                             <div class="lottie_box lottie_box1">
                                                 <lottie-player src="./images/main/picture.json" class="lottie_player" background="transparent" speed="2" loop autoplay ></lottie-player>
+                                                <!-- [DEV] 시민과학콘\지구사랑탐사대\메인 -->
+                                                <a href="" class="lottie_box_link"><span class="blind">지구사랑탐사대 메인</span></a>
+                                                <!--//-->
                                             </div>
                                             <div class="lottie_box lottie_box2">
                                                 <lottie-player src="./images/main/run.json" class="lottie_player" background="transparent" speed="2" loop autoplay ></lottie-player>
@@ -1524,23 +1612,40 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script>
         const menu = ['paging_con1', 'paging_con2', 'paging_con3', 'paging_con4'];
-        var swiper = new Swiper('.con_list',{
-            slidesPerView: 1,
-            speed: 600,
-            //effect: "fade",
-            loop: true,
-            // autoplay: {
-            //     delay: 4500,
-            //     disableOnInteraction: false,
-            // },
-            pagination: {
-                clickable:true,
-                el: '.con_list_paging',
-                renderBullet: function (index, className) {
-                    return '<span class="'+ className + '"><img src="./images/main/nav_con'+(index+1)+'.svg" alt="" class="nav_con_img"><i class="ico_pobi"><img src="./images/main/ico_pobi.svg" alt=""></i></span>';
-                },
+        var main_swiper = undefined;
+        function initSwiper1(target) {
+            let $this = $(target);
+            let screenWidth = window.innerWidth;
+            if(screenWidth > 767 && main_swiper == undefined) {
+                main_swiper = new Swiper(target, {
+                    slidesPerView: 1,
+                    speed: 600,
+                    //effect: "fade",
+                    loop: true,
+                    // autoplay: {
+                    //     delay: 4500,
+                    //     disableOnInteraction: false,
+                    // },
+                    pagination: {
+                        clickable:true,
+                        el: '.con_list_paging',
+                        renderBullet: function (index, className) {
+                            return '<span class="con_nav_item '+ className + ' con_nav_item' + (index+1) + '"><img src="./images/main/nav_con'+(index+1)+'.svg" alt="" class="nav_con_img"><i class="ico_pobi"><img src="./images/main/ico_pobi.svg" alt=""></i></span>';
+                        },
+                    }
+                });
+            } else if (screenWidth < 768 && main_swiper != undefined) {
+                main_swiper.destroy();
+                main_swiper = undefined;
+                $this.find('.swiper-wrapper').removeAttr('style');
+                $this.find('.swiper-slide').removeAttr('style');
             }
+        }
+        initSwiper1('.con_list');
+        $(window).on('resize', function(){
+            initSwiper1('.con_list');
         });
+
 
 
         var earth_notice = new Swiper('.earth_notice',{
