--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
                                 <div class="swiper-slide con_list_item con_list_item1">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
+                                            <h2 class="con_list_item_tit">
+                                                <a href="">
+                                                    <img src="./images/main/con_tit_story.svg" alt="스토리콘">
+                                                </a>
+                                            </h2>
                                             <svg xmlns="http://www.w3.org/2000/svg" id="" viewBox="0 0 1160 720"  class="svg_cont pc_only">
                                                 <image href="./images/main/main_con1.svg" width="1160" height="720" class="" />
                                                 <!-- 스토리콘 작품 리스트 -->
@@ -245,9 +250,6 @@
                                                 </foreignObject >
                                                 <!-- // -->
                                             </svg>
-
-
-
                                             <svg xmlns="http://www.w3.org/2000/svg" id="" viewBox="0 0 360 660"  class="svg_cont m_only">
                                                 <image href="./images/main/main_con1_m.svg" width="360" height="660" class="" />
                                                 <!-- 스토리콘 작품 리스트 -->
@@ -297,20 +299,20 @@
                                                 </foreignObject >
                                                 <!-- // -->
                                             </svg>
-
                                             <a href="" class="lottie_box">
                                                 <lottie-player src="./images/main/painting.json" class="lottie_player" background="transparent" speed="3" loop autoplay ></lottie-player>
                                             </a>
-
-
-
-
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide con_list_item con_list_item2">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
+                                            <h2 class="con_list_item_tit">
+                                                <a href="">
+                                                    <img src="./images/main/con_tit_press.svg" alt="기사콘">
+                                                </a>
+                                            </h2>
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720"   class="svg_cont" style="display: none">
                                                 <defs>
                                                     <clipPath id="2y1cwgxuya">
@@ -1425,6 +1427,11 @@
                                 <div class="swiper-slide con_list_item con_list_item3">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
+                                            <h2 class="con_list_item_tit">
+                                                <a href="">
+                                                    <img src="./images/main/con_tit_play.svg" alt="플레이콘">
+                                                </a>
+                                            </h2>
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720" class="svg_cont pc_only">
                                                 <image href="./images/main/main_con3.svg" width="1160" height="720"/>
                                                 <!-- [DEV] 플레이콘 어과수TV 최신 컨텐츠 노출, 클릭시 해당 컨텐츠로 이동 -->
@@ -1465,6 +1472,11 @@
                                 <div class="swiper-slide con_list_item con_list_item4">
                                     <div class="svg_box">
                                         <div class="svg_box_inner">
+                                            <h2 class="con_list_item_tit">
+                                                <a href="">
+                                                    <img src="./images/main/con_tit_earth.svg" alt="시민과학콘">
+                                                </a>
+                                            </h2>
                                             <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 720"  class="svg_cont">
                                                 <image href="./images/main/main_con4.svg" width="1160" height="720"/>
                                             </svg> -->
@@ -1622,10 +1634,10 @@
                     speed: 600,
                     //effect: "fade",
                     loop: true,
-                    // autoplay: {
-                    //     delay: 4500,
-                    //     disableOnInteraction: false,
-                    // },
+                    autoplay: {
+                         delay: 4500,
+                         disableOnInteraction: false,
+                    },
                     pagination: {
                         clickable:true,
                         el: '.con_list_paging',
