--- a/index.html
+++ b/index.html
@@ -1600,6 +1600,40 @@
                 </div>
 
             </div>
+            <nav id="tab_bar" class="tab_bar nav-up" style="display: block;">
+                <ul class="tab_bar_list">
+                    <li class="tab_bar_item ty_home">
+                        <a href="" class="tab_bar_link">
+                            <i class="ico"><img src="./images/tab_bar/ico_main.svg" alt=""></i>
+                            <span class="blind">스토리콘</span>
+                        </a>
+                    </li>
+                    <li class="tab_bar_item ty_storycon">
+                        <a href="" class="tab_bar_link">
+                            <i class="ico"><img src="./images/tab_bar/ico_storycon.svg" alt=""></i>
+                            <span class="txt">스토리콘</span>
+                        </a>
+                    </li>
+                    <li class="tab_bar_item ty_presscon">
+                        <a href="" class="tab_bar_link">
+                            <i class="ico"><img src="./images/tab_bar/ico_presscon.svg" alt=""></i>
+                            <span class="txt">기사콘</span>
+                        </a>
+                    </li>
+                    <li class="tab_bar_item ty_playcon">
+                        <a href="" class="tab_bar_link">
+                            <i class="ico"><img src="./images/tab_bar/ico_playcon.svg" alt=""></i>
+                            <span class="txt">플레이콘</span>
+                        </a>
+                    </li>
+                    <li class="tab_bar_item ty_citizencon">
+                        <a href="" class="tab_bar_link">
+                            <i class="ico"><img src="./images/tab_bar/ico_citizencon.svg" alt=""></i>
+                            <span class="txt">시민과학콘</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
             <footer id="footer" class="footer">
                 <ul class="footer_menu">
                     <li><a href="">회사소개</a></li>
